# libtokenizers

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  NOTES.md  README.md
.github/workflows/: pipeline.yml
examples/: .gitignore  CMakeLists.txt
examples/mobilebert-fill-mask/: convert.py  main.cc
include/tokenizers/: added_vocabulary.h  common.h  decoder.h  model.h  normalizer.h  post_processor.h  pre_tokenizer.h  tokenizer.h  utils.h
paper/: .gitignore  custom.bib  main.tex
scripts/tokenizers/: save.py
src/: added_vocabulary.cc  common.cc  decoder.cc  model.cc  normalizer.cc  post_processor.cc  pre_tokenizer.cc  tokenizer.cc  utils.cc
tests/: CMakeLists.txt  added_vocabulary_benchmark.cc  added_vocabulary_test.cc  decoder_benchmark.cc  decoder_test.cc  model_benchmark.cc  model_test.cc  normalizer_benchmark.cc  normalizer_test.cc  post_processor_benchmark.cc  post_processor_test.cc  pre_tokenizer_benchmark.cc  pre_tokenizer_test.cc  tokenizer_benchmark.cc  tokenizer_test.cc  utils_benchmark.cc  utils_test.cc
